--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <link rel="stylesheet" href="styleA.css">
 </head>
 <body>
-    <div class="box">A</div>
-    <div class="box">B</div>
-    <div class="box">C</div>
-    <div class="box">D</div>
-    <div class="box">E</div>
-    <div class="box final-box">F</div>
+    <div class="box-container">
+        <div class="box">A</div>
+        <div class="box">B</div>
+        <div class="box">C</div>
+        <div class="box">D</div>
+        <div class="box">E</div>
+        <div class="box">F</div>
+    </div>    
 </body>
 </html>
